--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A JavaScript tool to generate PDF files from DOM elements",
   "main": "dist/pdf-exporter.js",
   "scripts": {
-    "build": "tsc"
+    "dev": "rollup -c",
+    "build": "rollup -c --environment NODE_ENV:production && rollup -c"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,12 @@
   },
   "homepage": "https://github.com/DiracKeeko/pdf-exporter#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "rollup": "^2.75.6",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   },
   "dependencies": {
