--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     // "diagnostics": true,
     "outDir": "./dist",
     "target": "ES5",
-    "lib": [
-      "dom",
-      "ES2015.Promise",
-      "ES5"
-    ],
-    "module": "umd",                     /* module: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+    // "lib": [
+    //   "dom",
+    //   "ES2015.Promise",
+    //   "ES5"
+    // ],
+    "module": "ES2015",                     /* module: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "declaration": true,                 /* Generates corresponding '.d.ts' file. */
     "strict": true,
     "removeComments": true,
