--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es2016", "dom"],
     "target": "es6",
     "useDefineForClassFields": true,
     "allowJs": false,
